# resvg

./: .dockerignore  Cargo.toml
.github/workflows/: mayhem.yml  sync.yml
crates/c-api/: Cargo.toml  lib.rs
crates/resvg/: Cargo.toml
crates/resvg/src/filter/: iir_blur.rs
crates/usvg/: Cargo.toml
crates/usvg/src/: lib.rs
crates/usvg/src/parser/: mod.rs  use_node.rs
crates/usvg/tests/: parser.rs
mayhem/: Dockerfile  Mayhemfile  build.sh  test.sh  tree_from_bytes.mayhemfile
mayhem/fuzz/: Cargo.toml
mayhem/fuzz/fuzz_targets/: tree_from_bytes.rs
usvg/fuzz/: Cargo.toml
usvg/fuzz/fuzz_targets/: tree_from_bytes.rs
